[tool.poetry]
name = "rockpaperscissors"
version = "0.1.0"
description = "A solo game of \"Rock, Paper, Scissors\" against the computer, implemented in modern Python."
authors = ["JamzTyson <151654652+JamzTyson@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 88
disable = "W1203"
